cmake_minimum_required (VERSION 2.6)
project (native_lua)

message("${CMAKE_CURRENT_SOURCE_DIR}\n${CMAKE_CURRENT_BINARY_DIR}")
file(GLOB LUA_LIST "lua/*.c")
file(GLOB SOURCE_LIST "src/*.cpp")
file(GLOB LUA_FILE_LIST "scripts/*.lua")
file(COPY ${LUA_FILE_LIST} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/scripts")
add_executable(native_lua ${LUA_LIST} ${SOURCE_LIST})
include_directories("lua/")
include_directories("include/")